--- a/app/views/illnesses/show.html.erb
+++ b/app/views/illnesses/show.html.erb
@@ -11,61 +11,88 @@
 <div class="row">
 <!-- Description -->
 <div class="col-md-9">
-  <div class="card">
-    <div class="card-header">
-      <h4 class="lead"><span class="fa fa-info-circle"></span> Beskrivelse</h4>
-    </div>
-    <div class="card-block">
-      <div class="fr-view">
-        <%= @illness.try(:description).html_safe %>
-      </div>
-    </div>
-  </div>
+  <%= render 'show_description' %>
 </div>
 <!-- ------------- -->
 <br>
 <!-- Differential diagnoses -->
-  <%= render 'diffs' %>
+<div class="col-md-3">
+  <div class="card">
+    <div class="card-header lead">Hurtig info (WIP)</div>
+    <div class="card-block">
+      <ul class="list-unstyled">
+        <li class="media">
+            <div class="media-body">
+              <h6 class="mt-0 lead">Oprettet</h6>
+              <p class="mt-0"><%= @illness.created_at.strftime('%d-%m-%Y') %></p>
+            </div>
+          <h2 class="d-flex align-self-center mr-3"><span class="fa fa-pencil"> </span></h2>
+        </li>
+        <li class="media">
+          <div class="media-body">
+            <h6 class="mt-0 lead">Incidens</h6>
+            <p class="mt-0"><%= @illness.incidence %> om året, måske</p>
+          </div>
+          <h2 class="d-flex align-self-center mr-3"><span class="fa fa-area-chart"> </span></h2>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
 <!-- ------------- -->
 
 <!-- End of row -->
 </div>
 <br>
-<!-- Clinical and Paraclinical -->
-<div class="card-group">
-  <div class="card">
-    <div class="card-header">
-      <h4 class="lead"><span class="fa fa-eyedropper"> </span> Indikerede blodprøver</h4>
-    </div>
-    <div class="card-block">
-      <%= @illness.blood_sample %>
-      <% if @illness.blood_sample.empty? %>
-          <div class="alert alert-danger">
-            <center><p class="lead" style="font-size: large">Ingen blodprøver.</p></center>
-          </div>
-      <% end %>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header">
-      <h4 class="lead"><span class="icon-i-cath-lab"> </span> Indikeret billediagnostik</h4>
-    </div>
-    <div class="card-block">
-      <% if imaging_indicated %>
-        <%= render 'test_list_item', test: @illness.test, type: :mri %>
-        <%= render 'test_list_item', test: @illness.test, type: :xray %>
-        <%= render 'test_list_item', test: @illness.test, type: :ct %>
-        <%= render 'test_list_item', test: @illness.test, type: :pet %>
-        <%= render 'test_list_item', test: @illness.test, type: :pet_mri %>
-        <%= render 'test_list_item', test: @illness.test, type: :ultrasound %>
-      <% else %>
-        Ingen indikationer
-      <% end %>
+<!-- Clinical and Paraclinical row -->
+<div class="row">
+
+  <!-- Blood samples -->
+  <div class="col-md-4">
+   <div class="card">
+    <% if @illness.blood_sample.empty? %>
+      <div class="card-header">
+        <h4 class="lead"><span class="fa fa-eyedropper"> </span> <del>Blodprøver</del></h4>
+      </div>
+    <% else %>
+      <div class="card-header">
+        <h4 class="lead"><span class="fa fa-eyedropper"> </span> Blodprøver</h4>
+      </div>
+      <div class="card-block">
+        <%= @illness.blood_sample %>
+      </div>
+    <% end %>
     </div>
   </div>
+  <!-- ------------- -->
+  <!-- Imaging -->
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-header">
+        <h4 class="lead"><span class="icon-i-cath-lab"> </span> Indikeret billediagnostik</h4>
+      </div>
+      <div class="card-block">
+        <%= imaging_indicated(@illness.test) %>
+        <% if @illness.test.mri.empty? %>
+            Jeg er empty
+            <% else %>
+        <%= @illness.test.inspect %>
+        <% end %>
+        og her:<br><br>
+        <%= @illness.test.blank? %>
+      </div>
+    </div>
+  </div>
+  <!-- ------------- -->
+  <div class="col-md-4">
+  <%= render 'show_diffs' %>
+  </div>
+<!-- End of row -->
 </div>
 <!-- ------------- -->
+
 <br>
+
 <div id="accordion" role="tablist" aria-multiselectable="true">
 <!-- Etiology and pathogenesis -->
  <div class="card">
