Created new index site, specific category page and changes to show illness

--- a/app/views/illnesses/_show_diffs.html.erb
+++ b/app/views/illnesses/_show_diffs.html.erb
@@ -1,11 +1,11 @@
 <div class="card">
   <% if @illness.differentials.empty? %>
     <div class="card-header">
-      <h4 class="lead"><span class="fa fa-book"> </span> <del>Differentialdiagnoser</del></h4>
+      <h4 class="lead"><span class="fa fa-book"> </span> <del>Differentialdiagnoser</del> (WIP)</h4>
     </div>
   <% else %>
     <div class="card-header">
-      <h4 class="lead"><span class="fa fa-book"> </span> Differentialdiagnoser</h4>
+      <h4 class="lead"><span class="fa fa-book"> </span> Differentialdiagnoser (WIP)</h4>
     </div>
     <div class="list-group">
       <% @illness.differentials.each do |diff| %>
