--- a/app/views/illnesses/index.html.erb
+++ b/app/views/illnesses/index.html.erb
@@ -1,24 +1,9 @@
 <div class="container">
-<div class="col-md-12">
-<table class="table table-hover">
-  <thead class="thead-default">
-    <tr>
-      <th>Sygdommens navn</th>
-      <th>Kategori</th>
-      <th>Oprettet</th>
-      <th>Opdateret</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% for illness in @illnesses %>
-    <tr onclick="window.location='<%= illness_path(illness) %>'">
-      <td><%= illness.name %></td>
-      <td><%= illness.category %></td>
-      <td><%= illness.created_at.strftime('%d-%m-%Y') %></td>
-      <td><% if illness.created_at != illness.updated_at %><%= illness.updated_at.strftime('%d-%m-%Y') %><% end %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-</div>
+  <h1 class="display-3 text-center">Vælg en kategori!</h1>
+  <br>
+    <div class="card-group">
+      <% for category in @categories %>
+      <%= render 'index_card', category: category %>
+      <% end %>
+    </div>
 </div>
