--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,25 @@
 <body class="site-background">
 <!-- Render navbar. -->
 <%= render 'layouts/navbar' %>
-<% if alert %>
-    <p id="alert" class="alert alert-info"><%= alert %></p>
-<% end %>
-<% if notice %>
-    <p id="notice" class="alert alert-info"><%= notice %></p>
-<% end %>
 <ol class="breadcrumb">
   <%= render_breadcrumbs :separator => "<span class='lead'> » </span>".html_safe %>
 </ol>
 
-  <%= yield %>
+<div class="container-fluid">
+    <% if alert %>
+      <div class="col-md-6 offset-md-3">
+        <p id="alert" class="alert alert-danger text-center"><%= alert %></p>
+      </div>
+    <% end %>
+    <% if notice %>
+      <div class="col-md-6 offset-md-3">
+        <p id="notice" class="alert alert-info text-center"><%= notice %></p>
+      </div>
+    <% end %>
+</div>
+
+
+<%= yield %>
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
