--- a/app/views/illnesses/category.html.erb
+++ b/app/views/illnesses/category.html.erb
@@ -45,11 +45,11 @@
       });
   });
 </script>
-
 <div class="container">
     <div class="filterable">
-        <h1 class="display-4 pull-left"><%= @category.first.category %></h1>
-        <div class="pull-right">
+        <%= category_image(@category, "pull-left") %><br>
+        <h1 class="display-4 pull-left"><%= @categories.first.category %></h1>
+        <div class="pull-right"><br>
           <button class="btn btn-primary btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
         </div>
       <table class="table table-hover">
@@ -60,7 +60,7 @@
         </tr>
         </thead>
         <tbody>
-        <% for illness in @category %>
+        <% for illness in @categories %>
         <tr onclick="window.location='<%= illness_path(illness) %>'">
           <td><%= illness.name %></td>
           <td><%= illness.incidence %></td>
