--- a/app/views/illnesses/_show_description.html.erb
+++ b/app/views/illnesses/_show_description.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <h4 class="lead"><span class="fa fa-info-circle"></span> Beskrivelse</h4>
+    <h4 class="lead"><span class="fa fa-file-text-o"></span> Beskrivelse</h4>
   </div>
   <div class="card-block">
     <div class="fr-view">
