--- a/app/views/illnesses/category.html.erb
+++ b/app/views/illnesses/category.html.erb
@@ -56,6 +56,7 @@
         <thead class="thead-default">
         <tr class="filters">
           <th><input type="text" class="form-control" placeholder="Sygdom" disabled></th>
+          <th><input type="text" class="form-control" placeholder="Symptomer" disabled></th>
           <th><input type="text" class="form-control" placeholder="Incidens" disabled></th>
         </tr>
         </thead>
@@ -63,6 +64,7 @@
         <% for illness in @categories %>
         <tr onclick="window.location='<%= illness_path(illness) %>'">
           <td><%= illness.name %></td>
+          <td><%= illness.clinical.symptoms %></td>
           <td><%= illness.incidence %></td>
         </tr>
             <% end %>
