--- a/app/views/illnesses/index.html.erb
+++ b/app/views/illnesses/index.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="col-md-4 bg-faded">
+  <div class="col-md-4 bg-faded" style="box-shadow: 0px 0px 5px #b4b4b4">
       <div style="padding-top: 0px; padding-bottom: 0px;">
         <ul class="timeline">
           <li><h1 class="lead">Aktivitet</h1></li>
