--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <body class="site-background">
 <!-- Render navbar. -->
 <%= render 'layouts/navbar' %>
-<ol class="breadcrumb">
+<ol class="breadcrumb" style="box-shadow: 0px 0px 5px #b4b4b4">
   <%= render_breadcrumbs :separator => "<span class='lead'> » </span>".html_safe %>
 </ol>
 
