Added link option to Froala, changes to view and .. stuff

--- a/app/views/illnesses/_form.html.erb
+++ b/app/views/illnesses/_form.html.erb
@@ -1,5 +1,5 @@
 <script> $(function() { $('#description, #etio_and_pato').froalaEditor( {
-    toolbarButtons: ['undo', 'redo', '|' , 'bold', 'italic', 'underline', 'subscript', 'superscript', 'align', '|', 'insertImage', 'insertTable'],
+    toolbarButtons: ['undo', 'redo', '|' , 'bold', 'italic', 'underline', 'subscript', 'superscript', 'align', '|', 'insertImage', 'insertTable', 'insertLink'],
     height: 317,
     placeholderText: 'Skriv noget...'
     }) });
