--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,31 +1,54 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <%= link_to root_path, class: "navbar-brand mr-auto" do %>
-      <span class="icon-neurology" style="font-size: 4em;"></span>
-    <% end %>
-  <div class="navbar-collapse collapse" id="collapsingNavbar">
-
-    <ul class="navbar-nav ml-auto">
+  <%= link_to root_path, class: "navbar-brand mr-auto" do %>
+      <span class="icon-neurology d-inline-block align-top" style="font-size: 4em;"> </span>
+  <% end %>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to 'Sygdomme er nederen..', root_path, class:'nav-link h3' %>
+        <a class="nav-link" href="#">Sygdomme er nederen</a>
       </li>
+      <% @category_names.each_key do |key| %>
+        <li class="nav-item">
+          <%= link_to @category_names[key], { controller: :illnesses, action: :category, category: key}, { :class => 'nav-link' } %>
+        </li>
+      <% end %>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <% if user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to 'Ny sygdom', new_illness_path, class: 'btn btn-sm btn-success' %>
-      </li>
-           
-      <li class="nav-item">
-        <%= link_to 'Log ud', destroy_user_session_path, method: :delete, class: 'btn btn-sm btn-danger' %>
-      </li>
-          <% else %>
-          <li>
-            <%= link_to 'Login', new_user_session_path, class: 'btn btn-sm btn-primary nav-link' %>
-          </li>
-          <% end %>
-    </ul>
+    <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to 'Ny sygdom', new_illness_path, class: 'btn btn-sm btn-success' %>
+        </li>
+         
+        <li class="nav-item">
+          <%= link_to 'Log ud', destroy_user_session_path, method: :delete, class: 'btn btn-sm btn-danger' %>
+        </li>
+    <% else %>
+        <li>
+          <%= link_to 'Login', new_user_session_path, class: 'btn btn-sm btn-primary nav-link' %>
+        </li>
+    <% end %>
+
+  </ul>
   </div>
 </nav>
+<ol class="breadcrumb" style="box-shadow: 0px 0px 5px #b4b4b4">
+  <%= render_breadcrumbs :separator => "<span class='lead'> » </span>".html_safe %>
+
+<% if alert %>
+    <div class="container-fluid">
+      <div class="col-md-6 offset-md-3">
+        <p id="alert" class="alert alert-danger text-center"><%= alert %></p>
+      </div>
+    </div>
+<% end %>
+<% if notice %>
+    <div class="container-fluid">
+      <div class="col-md-6 offset-md-3">
+        <p id="notice" class="alert alert-info text-center"><%= notice %></p>
+      </div>
+    </div>
+<% end %>
+</ol>
