--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,27 +10,10 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
-<body class="site-background">
+<body class="site-background" style="padding-top: 100px;">
 <!-- Render navbar. -->
 <%= render 'layouts/navbar' %>
-<ol class="breadcrumb" style="box-shadow: 0px 0px 5px #b4b4b4">
-  <%= render_breadcrumbs :separator => "<span class='lead'> » </span>".html_safe %>
-</ol>
 
-<% if alert %>
-<div class="container-fluid">
-  <div class="col-md-6 offset-md-3">
-    <p id="alert" class="alert alert-danger text-center"><%= alert %></p>
-  </div>
-</div>
-<% end %>
-<% if notice %>
-<div class="container-fluid">
-  <div class="col-md-6 offset-md-3">
-    <p id="notice" class="alert alert-info text-center"><%= notice %></p>
-  </div>
-</div>
-<% end %>
 
 <%= yield %>
 
