--- a/app/views/illnesses/show.html.erb
+++ b/app/views/illnesses/show.html.erb
@@ -37,7 +37,7 @@
 <div class="col-md-6">
   <div class="card">
     <div class="card-header">
-      <h4 class="lead"><span class="fa fa-comment-o"></span> Symptomer og fund</h4>
+      <h4 class="lead"><span class="fa fa-comments-o"></span> Symptomer og fund</h4>
     </div>
         <div class="card-block">
         <%= @symptoms %>
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="fr-view">
-            <%= @illness.paraclinical %>
+            <%= @illness.paraclinical.html_safe %>
           </div>
         </div>
       </div>
