--- a/app/views/illnesses/show.html.erb
+++ b/app/views/illnesses/show.html.erb
@@ -17,7 +17,7 @@
       <h2 class="d-flex align-self-center mr-3"><span class="fa fa-pencil"> </span></h2>
       <div class="media-body">
         <h6 class="mt-0 lead">Oprettet</h6>
-        <p class="mt-0"><%= @illness.created_at.strftime('%d-%m-%Y') %></p>
+        <p class="mt-0"><%= @illness.try(:created_at).strftime('%d-%m-%Y') %></p>
       </div>
     </li>
   </ul>
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="fr-view">
-            <%= @illness.paraclinical.html_safe %>
+            <%= @illness.try(:paraclinical).html_safe %>
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-md-12">
             <div class="fr-view">
-              <%= @illness.etio_and_pato.html_safe %>
+              <%= @illness.try(:etio_and_pato).html_safe %>
             </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
   </div>
   <div id="collapseTreatment" class="collapse" role="tabpanel" aria-labelledby="headingTreatment">
     <div class="card-block">
-      <%= @illness.treatment.html_safe %>
+      <%= @illness.(:treatment).html_safe %>
     </div>
   </div>
 </div>
