--- a/app/views/illnesses/show.html.erb
+++ b/app/views/illnesses/show.html.erb
@@ -40,7 +40,7 @@
       <h4 class="lead"><span class="fa fa-comments-o"></span> Symptomer og fund</h4>
     </div>
         <div class="card-block">
-        <%= @symptoms %>
+        <%= @symptoms.html_safe %>
         </div>
   </div>
 </div>
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-md-12">
             <div class="fr-view">
-              <%= @illness.treatment.html_safe unless @illness.try(:etio_and_pato).nil? %>
+              <%= @illness.etio_and_pato.html_safe unless @illness.try(:etio_and_pato).nil? %>
             </div>
         </div>
       </div>
